2013-11-25  Adam Butcher  <adam@jessamine.co.uk>

	PR c++/59112
	PR c++/59113
	* parser.c (cp_parser_parameter_declaration_clause): Disallow implicit
	function templates in local functions unless defining a lambda.

2013-11-23  Easwaran Raman  <eraman@google.com>

	PR c++/59031
	* call.c (build_new_method_call_1): Comnpare function context
	with BASELINK_BINFO type rather than instance type before
	marking the call with LOOKUP_NONVIRTUAL.

2013-11-23  Jason Merrill  <jason@redhat.com>

	PR c++/58868
	* init.c (build_aggr_init): Don't clobber the type of init
	if we got an INIT_EXPR back from build_vec_init.
	(build_vec_init): Do digest_init on trivial initialization.

2013-11-23  Alexander Ivchenko  <alexander.ivchenko@intel.com>

	PR c++/58525
	* call.c (build_operator_new_call): Add flag_exceptions check.
	* decl.c (compute_array_index_type): Ditto.
	* init.c (build_new_1): Ditto.
	(build_vec_init): Ditto.

2013-11-22  Jakub Jelinek  <jakub@redhat.com>

	* cp-gimplify.c: Include target.h and c-family/c-ubsan.h.
	(cp_ubsan_maybe_instrument_return): New function.
	(cp_genericize): Call it if -fsanitize=return.

	* decl2.c: Include asan.h.
	(one_static_initialization_or_destruction): If -fsanitize=address,
	init is non-NULL and guard is NULL, set
	vnode->dynamically_initialized.
	(do_static_initialization_or_destruction): Call
	__asan_{before,after}_dynamic_init around the static initialization.

2013-11-22  Andrew MacLeod  <amacleod@redhat.com>

	* class.c: Add required include files from gimple.h.
	* cp-gimplify.c: Likewise
	* decl2.c: Likewise
	* init.c: Likewise
	* optimize.c: Likewise
	* pt.c: Likewise
	* semantics.c: Likewise
	* tree.c: Likewise
	* typeck.c: Likewise
	* vtable-class-hierarchy.c: Likewise

2013-11-22  David Malcolm  <dmalcolm@redhat.com>

	* call.c (build_integral_nontype_arg_conv): Remove use of
	EXPR_LOC_OR_HERE macro.
	(convert_like_real): Likewise.
	(convert_arg_to_ellipsis): Likewise.
	(build_cxx_call): Likewise.